Fixed issue with project page overflow

--- a/components/projects/projects.css
+++ b/components/projects/projects.css
@@ -1,4 +1,3 @@
-/* Review CSS */
 .reviewWrapper {
     width: fit-content;
     background-color: bisque;
@@ -11,12 +10,91 @@
     margin: 0;
 }
 
-/* Page Layout */
-.wrapper {
+.pageWrapper {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 10vw auto 5vw;
-    flex-grow: 1;
+    grid-template-rows: auto auto;
+}
+
+.title {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.projectsWrapper {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto 1vh auto 1vh auto;
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.project1Wrapper {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.project2Wrapper {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.project3Wrapper {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-column: 1/2;
+    grid-row: 5/6;
+}
+
+.projectDescriptionWrapper {
+    display: grid;
+    grid-template-columns: auto 8vw auto;
+    grid-template-rows: auto auto;
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+#p1Reviews, #p2Reviews, #p3Reviews {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.project1Image, .project3Image {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+.project2Image {
+    grid-column: 3/4;
+    grid-row: 1/3;
+}
+
+.project1Title, .project3Title {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.project2Title {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.project1Description, .project3Description  {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+.project2Description {
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 
 a {
@@ -29,93 +107,13 @@ a:hover {
     color: #1E2019;  
 }
 
-.projects {
-    display: grid;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    grid-template-columns: auto;
-    grid-template-rows: auto 8% auto 8% auto;
-    margin-bottom: 1vw;
-}
-
-/* First Project (SpinR) */
-.projectAndComment1 {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-.showcase1 {
-    display: grid;
-    grid-template-columns: 55% 5% auto;
-    grid-template-rows: 45% auto;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-#p1Reviews, #p2Reviews, #p3Reviews {
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-
-
-/* Second Project (Scriptux) */
-.projectAndComment2 {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-
-.showcase2 {
-    display: grid;
-    grid-template-columns: auto 5% 55%;
-    grid-template-rows: 45% auto;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-/* Third Project (PHS) */
-.projectAndComment3 {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-    grid-column: 1/2;
-    grid-row: 5/6;
-}
-
-.showcase3 {
-    display: grid;
-    grid-template-columns: 55% 5% auto;
-    grid-template-rows: 45% auto;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-/* Image CSS */
-.showcase1 .showcaseimage, .showcase3 .showcaseimage {
-    grid-column: 1/2;
-    grid-row: 1/3;
-}
-
-.showcase2 .showcaseimage {
-    grid-column: 3/4;
-    grid-row: 1/3;
-}
-
-.showcaseimage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow: hidden;
+.project1Image, .project2Image, .project3Image {
+    width: 99%;
+    height: 99%;
     border: 1px black solid;
     border-radius: 5px;
 }
 
-/* Responsive CSS (Below 1080 and above 1080)*/
 @media (max-width: 1080px) {    
     .title {
         grid-column: 1/2;
@@ -125,7 +123,7 @@ a:hover {
         text-align: center;
         text-decoration: underline;
     }
-    .showcase1 .showcasetitle, .showcase3 .showcasetitle {
+    .project1Title, .project3Title {
         grid-column: 3/4;
         grid-row: 1/2;
         align-content: end;
@@ -133,7 +131,7 @@ a:hover {
         font-size: 2.4vw;
     }
 
-    .showcase2 .showcasetitle {
+    .project2Title {
         grid-column: 1/2;
         grid-row: 1/2;
         text-align: right;
@@ -142,14 +140,14 @@ a:hover {
         font-size: 2.7vw;
     }
 
-    .showcase1 .showcasedescription, .showcase3 .showcasedescription {
+    .project1Description, .project3Description {
         grid-column: 3/4;
         grid-row: 2/3;
         font-family: inter;
         font-size: 1.8vw;
     }
 
-    .showcase2 .showcasedescription {
+    .project2Description {
         grid-column: 1/2;
         grid-row: 2/3;
         text-align: right;
@@ -166,7 +164,7 @@ a:hover {
         font-size: 2.2vw;
         text-align: center;
     }
-    .showcase1 .showcasetitle, .showcase3 .showcasetitle {
+    .project1Title, .project3Title {
         grid-column: 3/4;
         grid-row: 1/2;
         align-content: end;
@@ -174,7 +172,7 @@ a:hover {
         font-size: 2.2vw;
     }
 
-    .showcase2 .showcasetitle {
+    .project2Title {
         grid-column: 1/2;
         grid-row: 1/2;
         text-align: right;
@@ -183,14 +181,14 @@ a:hover {
         font-size: 2.2vw;
     }
 
-    .showcase1 .showcasedescription, .showcase3 .showcasedescription {
+    .project1Description, .project3Description {
         grid-column: 3/4;
         grid-row: 2/3;
         font-family: inter;
         font-size: 1vw;
     }
 
-    .showcase2 .showcasedescription {
+    .project2Description {
         grid-column: 1/2;
         grid-row: 2/3;
         text-align: right;
